--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      height: 80vh;
+      height: auto;
       text-align: center;
       background: var(--primary-color);
       color: white;
@@ -158,6 +158,13 @@
       .hero img {
         width: 80%;
       }
+      .section {
+        padding: 1rem;
+      }
+      .grid {
+        grid-template-columns: 1fr;
+      }
+
     }
     #contact {
       text-align: center;
@@ -193,6 +200,7 @@
         display: inline-block;
         margin-right: auto;
         margin-top :0;
+        text-align: center;
 
     }
     section h2:hover {
